--- a/index.html
+++ b/index.html
@@ -16,19 +16,27 @@
       <a href="./index.html">
         <img src="./img/logo.png" alt="Logo" />
       </a>
-      <nav class="navbar">
-        <a href="#menu" class="nav-menu"><i class="fa-solid fa-bars"></i></a>
-        <div class="menu" id="menu">
-          <a href="./index.html">Inicio</a>
-          <a href="./pages/nosotros.html">Nosotros</a>
-          <a href="./pages/services.html">Servicios</a>
-          <a href="./pages/contact.html">Contactos</a>
-          <a href="./pages/ayuda.html">Ayuda</a>
-          <a href="/" class="container-btn">
-            <button class="btn">Manual</button>
-          </a>
-        </div>
-      </nav>
+      <input type="checkbox" class="checkbox" id="open-nav">
+      <label for="open-nav" class="header__open-nav"><i class="fa-solid fa-bars"></i></label>
+      <nav class="nav">
+        <ul class="nav__ul">
+            <li class="nav__ul-li">
+                <a href="./index.html" class="nav__ul-li-link">Inicio</a>
+            </li>
+            <li class="nav__ul-li">
+              <a href="./pages/nosotros.html" class="nav__ul-li-link">Nosotros</a>
+            </li>
+            <li class="nav__ul-li">
+                <a href="./pages/services.html" class="nav__ul-li-link">Servicios</a>
+            </li>
+            <li class="nav__ul-li">
+                <a href="./pages/contact.html" class="nav__ul-li-link">Contactos</a>
+            </li>
+            <li class="nav__ul-li">
+                <a href="./pages/ayuda.html" class="nav__ul-li-link">Ayuda</a>
+            </li>
+        </ul>
+    </nav>
     </header>
     <main class="main">
       <section class="header-us" id="header-us">
