--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -12,24 +12,32 @@
     ></script>
 </head>
 <body>
-    <header class="header">
-      <a href="../index.html">
-        <img src="../img/logo.png" alt="Logo" />
-      </a>
-      <nav class="navbar">
-        <a href="#menu" class="nav-menu"><i class="fa-solid fa-bars"></i></a>
-        <div class="menu" id="menu">
-          <a href="../index.html">Inicio</a>
-          <a href="./nosotros.html">Nosotros</a>
-          <a href="./services.html">Servicios</a>
-          <a href="./contact.html">Contactos</a>
-          <a href="./ayuda.html">Ayuda</a>
-          <a href="/" class="container-btn">
-            <button class="btn">Manual</button>
-          </a>
-        </div>
-      </nav>
-    </header>
+  <header class="header">
+    <a href="../index.html">
+      <img src="../img/logo.png" alt="Logo" />
+    </a>
+    <input type="checkbox" class="checkbox" id="open-nav">
+    <label for="open-nav" class="header__open-nav"><i class="fa-solid fa-bars"></i></label>
+    <nav class="nav">
+      <ul class="nav__ul">
+          <li class="nav__ul-li">
+              <a href="../index.html" class="nav__ul-li-link">Inicio</a>
+          </li>
+          <li class="nav__ul-li">
+              <a href="./nosotros.html" class="nav__ul-li-link">Nosotros</a>
+          </li>
+          <li class="nav__ul-li">
+              <a href="./services.html" class="nav__ul-li-link">Servicios</a>
+          </li>
+          <li class="nav__ul-li">
+              <a href="./contact.html" class="nav__ul-li-link">Contactos</a>
+          </li>
+          <li class="nav__ul-li">
+              <a href="./ayuda.html" class="nav__ul-li-link">Ayuda</a>
+          </li>
+      </ul>
+  </nav>
+  </header>
     <main>
       <div class="main">
         <div class="main-container">
