--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -21,19 +21,19 @@
     <nav class="nav">
       <ul class="nav__ul">
           <li class="nav__ul-li">
-              <a href="./index.html" class="nav__ul-li-link">Inicio</a>
+              <a href="../index.html" class="nav__ul-li-link">Inicio</a>
           </li>
           <li class="nav__ul-li">
-              <a href="./pages/nosotros.html" class="nav__ul-li-link">Nosotros</a>
+              <a href="./nosotros.html" class="nav__ul-li-link">Nosotros</a>
           </li>
           <li class="nav__ul-li">
-              <a href="./pages/services.html" class="nav__ul-li-link">Servicios</a>
+              <a href="./services.html" class="nav__ul-li-link">Servicios</a>
           </li>
           <li class="nav__ul-li">
-              <a href="./pages/contact.html" class="nav__ul-li-link">Contactos</a>
+              <a href="./contact.html" class="nav__ul-li-link">Contactos</a>
           </li>
           <li class="nav__ul-li">
-              <a href="./pages/ayuda.html" class="nav__ul-li-link">Ayuda</a>
+              <a href="./ayuda.html" class="nav__ul-li-link">Ayuda</a>
           </li>
       </ul>
   </nav>
