--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -41,8 +41,8 @@
   <main>
     <section>
       <h2>Ayuda</h2>
-      <p>Nuestro manual de usuario te guiará paso a paso para que puedas aprovechar al máximo todas las funcionalidades de nuestra plataforma.</p>
-      <p>Haz clic aquí para descargar el manual y resolver todas tus dudas</p>
+      <p class="p">Nuestro manual de usuario te guiará paso a paso para que puedas aprovechar al máximo todas las funcionalidades de nuestra plataforma.</p>
+      <p class="p">Haz clic aquí para descargar el manual y resolver todas tus dudas</p>
       <div class="btn-manual">
         <a href="../document/manual-de-usuario-J-LACRUZ.pdf" download="manual-de-usuario-J-LACRUZ"  class="container-btns">
           <button class="btn">Descargar PDF</button>
