--- a/pages/contact.html
+++ b/pages/contact.html
@@ -90,6 +90,9 @@
         <input type="text" name="correo" placeholder="Escribe Tu Correo"/><br>
         <label for="asunto">Asunto</label><br>
         <textarea name="asunto" placeholder="Escribe Tu Mensaje"></textarea>
+        <a href="#" class="container-btns">
+          <button class="btn">Enviar</button>
+        </a>
       </form>
     </section>
     <div class="container">
