Correciones de la defensa

--- a/pages/services.html
+++ b/pages/services.html
@@ -137,29 +137,45 @@
     <section class="projects" id="projects">
       <h2 class="title">Proyectos Realizados</h2>
       <div class="container-photo">
-        <div class="img">
-          <img src="../img/project-1.png" alt="Proyecto 1" />
+        <div class="img img-1">
+          <div class="fondo">
+          </div>
+          <p>Desmalezado</p>
         </div>
-        <div class="img">
-          <img src="../img/project-2.png" alt="Proyecto 1" />
+        <div class="img img-2">
+          <div class="fondo">
+          </div>
+          <p>Traslado de productos de limpieza</p>
         </div>
-        <div class="img">
-          <img src="../img/project-3.png" alt="Proyecto 1" />
+        <div class="img img-3">
+          <div class="fondo">
+          </div>
+          <p>Mantenimiento de salas de baño</p>
         </div>
-        <div class="img">
-          <img src="../img/project-4.png" alt="Proyecto 1" />
+        <div class="img img-4">
+          <div class="fondo">
+          </div>
+          <p>Mantenimiento de salas de baño</p>
         </div>
-        <div class="img img-none">
-          <img src="../img/project-5.png" alt="Proyecto 1" />
+        <div class="img img-none img-5">
+          <div class="fondo">
+          </div>
+          <p>Desmalezado</p>
         </div>
-        <div class="img img-none">
-          <img src="../img/project-6.png" alt="Proyecto 1" />
+        <div class="img img-none img-6">
+          <div class="fondo">
+          </div>
+          <p>Mantemiento de Griferias</p>
         </div>
-        <div class="img img-none">
-          <img src="../img/project-1.png" alt="Proyecto 1" />
+        <div class="img img-none img-7">
+          <div class="fondo">
+          </div>
+          <p>Desmalezado</p>
         </div>
-        <div class="img img-none">
-          <img src="../img/project-2.png" alt="Proyecto 1" />
+        <div class="img img-none img-8">
+          <div class="fondo">
+          </div>
+          <p>Traslado de productos de limpieza</p>
         </div>
       </div>
       <div class="container">
