--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               Desde mantenimiento hasta limpieza, contamos con un equipo especializado para cada tarea
             </h2>
             <p>
-              ¿Te Preguntas quien esta detras de cada servicio? ¡Descubrelo! Haz click en nosotros para mayor informacion.
+              ¿Te Preguntas quién está detrás de cada servicio? ¡Descúbrelo! Haz clic en nosotros para obtener más información.
             </p>
             <a href="./pages/nosotros.html" class="container-btn">
               <button class="btn">Nosotros</button>
