--- a/pages/contact.html
+++ b/pages/contact.html
@@ -92,6 +92,7 @@
         <textarea name="asunto" placeholder="Escribe Tu Mensaje"></textarea>
         <a href="#" class="container-btns">
           <button class="btn">Enviar</button>
+          <input type="reset" value="Limpiar" name="Limpiar" class="btn" />
         </a>
       </form>
     </section>
