--- a/pages/services.html
+++ b/pages/services.html
@@ -44,6 +44,7 @@
         Soluciones integrales para tu hogar y negocio. Expertos en mantenimiento
         y limpieza. Con J. Lacruz C.A., ¡Tu espacio siempre lucirá impecable!
       </p>
+      <h2 class="title" style="margin-bottom: 40px;">Servicios</h2>
       <div class="container-card">
         <article class="card services-back-one">
           <div class="back-tittle"></div>
