--- a/pages/services.html
+++ b/pages/services.html
@@ -166,7 +166,7 @@
         <div class="img img-none img-6">
           <div class="fondo">
           </div>
-          <p>Mantemiento de Griferias</p>
+          <p>Mantemiento de Griferías</p>
         </div>
         <div class="img img-none img-7">
           <div class="fondo">
